--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>aeos</title>
+  <title>shu</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
